<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="205dp"
        android:layout_height="52dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="2dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        android:autofillHints="" />


    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="61dp"
        android:text="Login"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btnRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:text="@string/haven_t_registered_register_here" />

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialicons"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="24dp"
        android:text="@string/or_sign_in_with"
        android:textColor="#F3EBEB"
        app:layout_constraintBottom_toTopOf="@+id/socialicons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterActivity" />

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/others">


        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter" />

    </LinearLayout>

</RelativeLayout>